I made some fixes to the stevens college portion.
I made the changes due to the size of the display was to large and
not centered.

--- a/instagram/styles.css
+++ b/instagram/styles.css
@@ -12,11 +12,22 @@ html {
  }
 p {
 
+justify-content: center;
 
 }
 
+a:hover {
 
 
+
+}
+
+input {
+
+
+
+
+}
 
 
 
